--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "python.analysis.typeCheckingMode": "strict",
-  "python.analysis.extraPaths": ["./backend"],
-  "python.autoComplete.extraPaths": ["./backend"]
+  "python.analysis.extraPaths": [
+    "./backend",
+    "./backend/env/lib/python3.13/site-packages"
+  ],
+  "python.autoComplete.extraPaths": [
+    "./backend",
+    "./backend/env/lib/python3.13/site-packages"
+  ]
 }
