--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,8 +20,12 @@ moviepy = "^1.0.3"
 pillow = "^10.3.0"
 types-pillow = "^10.2.0.20240520"
 aiohttp = "^3.9.5"
-pydantic = "^2.10"
+pydantic = {extras = ["email"], version = "^2.10.6"}
 google-genai = "^0.3.0"
+prisma = "^0.15.0"
+jose = "^1.0.0"
+pyjwt = "^2.10.1"
+stripe = "^11.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
