--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,8 @@ click==8.1.7
 decorator==4.4.2
 distlib==0.3.9
 distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.115.6
 filelock==3.16.1
 frozenlist==1.5.0
@@ -29,7 +31,10 @@ idna==3.10
 imageio==2.36.1
 imageio-ffmpeg==0.5.1
 iniconfig==2.0.0
+Jinja2==3.1.6
 jiter==0.8.2
+jose==1.0.0
+MarkupSafe==3.0.2
 moviepy==1.0.3
 multidict==6.1.0
 nodeenv==1.9.1
@@ -40,12 +45,15 @@ pillow==10.4.0
 platformdirs==4.3.6
 pluggy==1.5.0
 pre-commit==3.8.0
+prisma==0.15.0
 proglog==0.1.10
 propcache==0.2.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pydantic==2.10.4
+pycrypto==2.6.1
+pydantic==2.10.6
 pydantic_core==2.27.2
+PyJWT==2.10.1
 pyright==1.1.391
 pytest==7.4.4
 python-dotenv==1.0.1
@@ -56,7 +64,9 @@ setuptools==75.6.0
 sniffio==1.3.1
 soupsieve==2.6
 starlette==0.41.3
+stripe==11.6.0
 tokenizers==0.21.0
+tomlkit==0.13.2
 tqdm==4.67.1
 types-Pillow==10.2.0.20240822
 typing_extensions==4.12.2
