--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ prisma = "^0.15.0"
 jose = "^1.0.0"
 pyjwt = "^2.10.1"
 stripe = "^11.6.0"
+pycryptodome = "^3.21.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
